# inception-v3-burn

./: .gitignore  .sync-exclude.lst  Cargo.toml  README.md  download_fid_weights.py
src/model/: basic_block.rs  block.rs  inception_a.rs  inception_aux.rs  inception_b.rs  inception_c.rs  inception_d.rs  inception_e.rs  inception_v3.rs  mod.rs  weights.rs  weights_loader.rs
