[package]
name = "inception-v3-burn"
version = "0.2.0"
edition = "2021"
authors = ["varonroy <varonroy@gmail.com>"]

[features]
pretrained = ["burn/network", "dep:dirs"]

[dependencies]
burn = "^0.14.0"
burn-import = "^0.14.0"
dirs = { version = "5.0.1", optional = true }

[dev-dependencies]
burn = { version = "^0.14.0", features = ["ndarray"]}
